--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h3>Double click on the image to <i class="fas fa-heart"></i></h3>
       <small>You liked it <span id="times">0</span> times</small>
 
-      <div class="loveMe"></div>
+      <div class="love-me"></div>
     <script src="script.js"></script>
   </body>
 </html>
